--- a/.gitmodules
+++ b/.gitmodules
@@ -2,6 +2,10 @@
 	path = prj-analytic-dashboard
 	url = git@github.com:abuabdirohman4/prj-analytic-dashboard.git
 	branch = develop
+[submodule "prj-gnbs-module"]
+	path = prj-gnbs-module
+	url = git@github.com:abuabdirohman4/prj-gnbs-module.git
+	branch = main
 [submodule "prj-nomads-travel-web"]
 	path = prj-nomads-travel-web
 	url = git@github.com:abuabdirohman4/prj-nomads-travel-web.git
@@ -10,10 +14,10 @@
 	path = prj-portfolio
 	url = git@github.com:abuabdirohman4/prj-portfolio.git
 	branch = prod
-[submodule "prj-gnbs-module"]
-	path = prj-gnbs-module
-	url = git@github.com:abuabdirohman4/prj-gnbs-module.git
-	branch = main
+[submodule "prj-sabilillah-app"]
+	path = prj-sabilillah-app
+	url = git@github.com:abuabdirohman4/prj-sabilillah-app.git
+	branch = master
 [submodule "prj-yea-virtual"]
 	path = prj-yea-virtual
 	url = git@github.com:abuabdirohman4/prj-yea-virtual.git
