--- a/.gitmodules
+++ b/.gitmodules
@@ -55,3 +55,6 @@
 [submodule "prj-financial-app-mobile"]
 	path = prj-financial-app-mobile
 	url = https://github.com/abuabdirohman4/prj-financial-app-mobile.git
+[submodule "prj-habit-tracker"]
+	path = prj-habit-tracker
+	url = https://github.com/abuabdirohman4/prj-habit-tracker.git
