--- a/.gitmodules
+++ b/.gitmodules
@@ -58,3 +58,6 @@
 [submodule "prj-habit-tracker"]
 	path = prj-habit-tracker
 	url = https://github.com/abuabdirohman4/prj-habit-tracker.git
+[submodule "better-planner"]
+	path = better-planner
+	url = https://github.com/abuabdirohman4/better-planner.git
